--- a/Models/Models.vcxproj
+++ b/Models/Models.vcxproj
@@ -110,7 +110,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>;$(SolutionDir);$(SolutionDir)ThirdParty;$(SolutionDir)ThirdParty</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir);$(SolutionDir)ThirdParty\glew-2.1.0\include;$(SolutionDir)ThirdParty\glm-0.9.9.8\glm;$(SolutionDir)ThirdParty\glfw-3.3.7\include;$(SolutionDir)ThirdParty</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
